CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(meta_mgr)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
SET(SRC_BASE ${PROJECT_SOURCE_DIR})
SET(SRC_CPP
	${SRC_BASE}/hash.cpp
	${SRC_BASE}/profile.cpp
	${SRC_BASE}/store_intf.cc
	${SRC_BASE}/store_impl.cc
	)

INCLUDE_DIRECTORIES(${SRC_BASE}/../third_party ${SRC_BASE}/../include)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_CPP})
ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD COMMAND cp lib*.so ../)

