CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(meta_tester)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DELPP_THREAD_SAFE -DELPP_NO_DEFAULT_LOG_FILE")
SET(SRC_BASE ${PROJECT_SOURCE_DIR})
SET(SRC_TESTER ${SRC_BASE}/meta_tester.cc
            ${SRC_BASE}/main.cc
    )

INCLUDE_DIRECTORIES(${SRC_BASE}/../include ${SRC_BASE}/../third_party)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_TESTER})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} pthread dl)
ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD COMMAND cp ${PROJECT_NAME} ../)

